<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".Activities.Views.ClasesViews.DetalleActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:fitsSystemWindows="true">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            android:theme="@style/AppTheme.AppBarOverlay"
            app:contentScrim="?attr/colorPrimary"
            app:elevation="0dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/ImageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"
                app:layout_collapseParallaxMultiplier="0.7" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/nestedScroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/detalle_btn_estado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Proximamente"
                android:textSize="@dimen/detalle_text_size"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/facilidades"
                android:textSize="@dimen/detalle_text_size" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:text="@string/contado"
                android:textSize="@dimen/detalle_text_size" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:text="@string/cuotas"
                android:textSize="@dimen/detalle_text_size" />

            <TextView
                android:id="@+id/detalle_txt_costo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:text="Costo"
                android:textSize="@dimen/detalle_text_size" />

            <TextView
                android:id="@+id/detalle_txt_fechaRegular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:text="Fecha regular"
                android:textSize="@dimen/detalle_text_size" />

            <TextView
                android:id="@+id/detalle_txt_horarioRegular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:text="Horario regular"
                android:textSize="@dimen/detalle_text_size" />

            <TextView
                android:id="@+id/detalle_txt_fechaSabatino"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:text="Fecha sabatino"
                android:textSize="@dimen/detalle_text_size" />

            <TextView
                android:id="@+id/detalle_txt_horarioSabatino"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:text="Horario sabatino"
                android:textSize="@dimen/detalle_text_size" />

            <TextView
                android:id="@+id/detalle_txt_duracion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:text="duracion"
                android:textSize="@dimen/detalle_text_size" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:text="@string/conocmientos_demostrar"
                android:textSize="@dimen/detalle_text_size" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:drawableLeft="@drawable/abc_seekbar_thumb_material"
                android:text="@string/sistema_emmet"
                android:textSize="@dimen/detalle_text_size" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:drawableLeft="@drawable/abc_seekbar_thumb_material"
                android:text="@string/HTML_CSS"
                android:textSize="@dimen/detalle_text_size" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:drawableLeft="@drawable/abc_seekbar_thumb_material"
                android:text="@string/prototipado"
                android:textSize="@dimen/detalle_text_size" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:drawableLeft="@drawable/abc_seekbar_thumb_material"
                android:text="@string/sistemas_adaptativos"
                android:textSize="@dimen/detalle_text_size" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:textStyle="bold"
                android:text="@string/prerrequisitos"
                android:textSize="@dimen/detalle_text_size" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:drawableLeft="@drawable/abc_seekbar_thumb_material"
                android:text="@string/ofimatica"
                android:textSize="@dimen/detalle_text_size" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:textStyle="bold"
                android:text="@string/temario"
                android:textSize="@dimen/detalle_text_size" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:drawableLeft="@drawable/abc_seekbar_thumb_material"
                android:text="@string/historia_web"
                android:textSize="@dimen/detalle_text_size" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:drawableLeft="@drawable/abc_seekbar_thumb_material"
                android:text="@string/funcionamiento_web"
                android:textSize="@dimen/detalle_text_size" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:drawableLeft="@drawable/abc_seekbar_thumb_material"
                android:text="@string/html5"
                android:textSize="@dimen/detalle_text_size" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:drawableLeft="@drawable/abc_seekbar_thumb_material"
                android:text="@string/css3"
                android:textSize="@dimen/detalle_text_size" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:drawableLeft="@drawable/abc_seekbar_thumb_material"
                android:text="@string/javascript"
                android:textSize="@dimen/detalle_text_size" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:drawableLeft="@drawable/abc_seekbar_thumb_material"
                android:text="@string/publicaciones_web"
                android:textSize="@dimen/detalle_text_size" />


            <TextView
                android:id="@+id/detalle_txt_minima"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:text="@string/cantidad_minima"
                android:textSize="@dimen/detalle_text_size" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:text="@string/iva"
                android:textSize="@dimen/detalle_text_size" />


        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>
